Connected to Mongo in the cloud

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,1 +1,9 @@
-h1 Hello You
+doctype html
+html
+  head
+    title My title
+    block head
+  body
+    #content
+      block content
+    div hello
