Finished to-do routes and model

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,9 +1,7 @@
 doctype html
 html
   head
-    title My title
-    block head
+    title It Shall Be Done
   body
     #content
       block content
-    div hello
