--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,7 @@
 form(action="/login" method="post")
 	div
 		label Username:
-		input(type="text" name="username")
+		input(type="text" name="email")
 		br
 	div
 		label Password:
