Swithing authentication to passport-local

--- a/client/views/login.html
+++ b/client/views/login.html
@@ -2,7 +2,7 @@
 	<div class='col-xs-6 col-xs-offset-3 col-md-6'>
 
 		<div class='col-xs-6 col-xs-offset-3 col-md-6'>
-			<form action="/login" method="post">
+			<form action="/session/login" method="post">
 				<div>
 					<label> Email: </label>
 					<input type="text" name="email"/>
