--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,21 +1,39 @@
 <div class='row'>
-	<div class='col-xs-6 col-xs-offset-3 col-md-6'>
+	<div class='col-md-3 col-md-offset-3 col-xs-6'>
+		Login
+		<form action="/login" method="post">
+			<div class="form-group">
+				<label> Email: </label>
+				<input type="text" name="email" class='form-control'/>
+			</div>
+			<div class="form-group">
+				<label> Password: </label>
+				<input type="password" name="password" class='form-control'/>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Submit" class='btn btn-primary'/>
+			</div>
+		</form>		
+	</div>
 
-		<div class='col-xs-6 col-xs-offset-3 col-md-6'>
-			<form action="/session/login" method="post">
-				<div>
-					<label> Email: </label>
-					<input type="text" name="email"/>
-					<br/>
-				</div>
-				<div>
-					<label> Password: </label>
-					<input type="password" name="password"/>
-				</div>
-				<div>
-					<input type="submit" value="Submit" />
-				</div>
-			</form>
-		</div>
+	<div class='col-md-3 col-xs-6'>
+		Sign Up
+		<form action="/api/user" method="post">
+			<div class="form-group">
+				<label> Email: </label>
+				<input type="text" name="email" class='form-control'/>
+			</div>
+			<div class="form-group">
+				<label> Password: </label>
+				<input type="password" name="password" class='form-control'/>
+			</div>
+			<div class="form-group">
+				<label> Username (can be anything you want!):</label>
+				<input type='text' name='username' class='form-control'/>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Submit" class='btn btn-primary'/>
+			</div>
+		</form>	
 	</div>
 </div>
