--- a/client/views/layouts.html
+++ b/client/views/layouts.html
@@ -8,8 +8,8 @@
     <script src="dist/angular-flash.js"></script>
     <script src="javascripts/app.js"></script>
   </head>
-  <body>
-    <nav class="navbar navbar-default">
+  <body ng-controller='layoutsController'>
+    <nav class="navbar navbar-default" ng-if='user'>
       <div class="container-fluid">
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown"></li>
