--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -1,6 +1,36 @@
+<div class='row'><h1>Let's Get to Work!</h1></div>
+<div class='row'>
+    <div class='col-xs-12 col-md-10 col-md-offset-1'>
+        <table class="table table-striped-custom">
+			<theader>
+				<th width='20%'>Time Left</th>
+				<th width='70%'>Task</th>
+				<th width='10%'>Finished?</th>
+			</theader>
+			<tbody id='open-tasks'>
+				<tr id="{{item._id}}" ng-repeat='item in open track by item._id'>
+                    <td>#</td>
+                    <td>{{item.todo}}</td>
+                    <td>
+                        <input type="checkbox" ng-click="checked(item)" />
+                    </td>
+                </tr>
+			</tbody>
+		</table>
 
-<script>var clientUser = user;</script>
-<h1>Hello {{name}}</h1>
+        <div class='row'>
+            <div class='col-xs-12 col-md-10 col-md-offset-1' id='finished-table'>
+                <table class='table'>
+                    <th colspan='3'>Finished Tasks</th>
+                    <tbody id='finished-tasks'>
+                        <tr id="{{item._id}}" ng-repeat='item in done track by item._id'>
+                            <td col-span="2"><li>{{item.todo}}</li></td>
+	                        <td><button class='btn btn-primary' ng-click="checked(item)">Undo</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-<h2>Your username is : {{user.name}}</h2>
-<h3>This is a {{ 'test' }}</h3>
+    </div>
+</div>
