--- a/client/views/layouts.html
+++ b/client/views/layouts.html
@@ -4,11 +4,8 @@
     <title>Git 'R' Done</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='client/stylesheets/app.css'>
-    <script src="https://code.angularjs.org/1.6.4/angular.min.js"></script>
-    <script src="https://code.angularjs.org/1.6.4/angular-route.min.js"></script>
-    <script src="dist/angular-flash.js"></script>
-    <script src="client/javascripts/app.js"></script>
   </head>
+
   <body ng-controller='layoutsController'>
     <nav class="navbar navbar-default navbar-fixed-top" >
       <div class="container-fluid">
@@ -27,5 +24,12 @@
         <div ng-view></div>
       </div>
     </div>
+
+    <script src="https://code.angularjs.org/1.6.4/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.6.4/angular-route.min.js"></script>
+    <script src="https://code.angularjs.org/1.6.4/angular-sanitize.min.js"></script>
+    <script src='http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js'></script>
+    <script src="dist/angular-flash.js"></script>
+    <script src="client/javascripts/app.js"></script>
   </body>
 </html>
