--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -17,13 +17,14 @@
                         <div class='row' id='show{{item._id}}' ng-class='{hidden: show}'>
                             <div class='col-xs-8' id='t{{item._id}}'>{{item.todo}}</div>
                             <div class='col-xs-1'><button class='btn btn-primary' ng-click='editTodo(item)'>Edit</button></div>
-                            <div class='col-xs-1 col-xs-offset-1'><button class='btn btn-primary' ng-click='deleteTodo(item)'>Delete</button></div>
+                            <div class='col-xs-1 col-xs-offset-1'>
+                            
+                                
+                                <button class='btn btn-primary' ng-click='deleteTodo(item)'>Delete</button></div>
                         </div>
                         <div class='row hidden' id='edit{{item._id}}' >
                             <div class='col-xs-9'>
-                                <form id='editForm'>
-                                    <input ng-enter='saveTodo(item)' size='50%' type='text' ng-model='editObject.text' />                                   
-                                </form>
+                                    <input class='form-control' autofocus='true' ng-enter='saveTodo(item)' size='50%' type='text' ng-model='editObject.text' />                                   
                             </div>
                             <div class='col-xs-1'>
                                 <button class='btn btn-primary' ng-click='saveTodo(item)'>Save</button>
