Changed package.json start point from index.js to app.js

--- a/client/views/account.html
+++ b/client/views/account.html
@@ -1,7 +1,15 @@
 <h1>Account Settings</h1>
 
 <h3>Change Email</h3>
-
+<form>
+    <div class='form-group'>
+        <label>New Email:</label>
+        <input type='email' class='form-control' />
+        <label>Re-enter email: </label>
+        <input type='email' />
+        <input type='submit' value='Save'/>
+    </div>
+</form>
 <h3>Change Password</h3>
 
 <h3>Change Username</h3>
