--- a/client/views/account.html
+++ b/client/views/account.html
@@ -17,4 +17,5 @@
     <h3>Change Username</h3>
 
     <h3>Close Account</h3>
+    <button ng-click="deleteUser()" class='btn btn-danger'>Delete</button>
 </div>
