--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,13 +1,13 @@
 <div class='col-md-3 col-md-offset-3 col-xs-12'>
 	Login
-	<form action="/login" method="post">
+	<form  ng-submit="login()">
 		<div class="form-group">
 			<label> Email: </label>
-			<input type="text" name="email" class='form-control'/>
+			<input type="text" name="email" class='form-control' ng-model='form.email' />
 		</div>
 		<div class="form-group">
 			<label> Password: </label>
-			<input type="password" name="password" class='form-control'/>
+			<input type="password" name="password" class='form-control' ng-model='form.password' />
 		</div>
 		<div class="form-group">
 			<input type="submit" value="Submit" class='btn btn-primary'/>
