--- a/client/views/account.html
+++ b/client/views/account.html
@@ -17,7 +17,5 @@
     <h3>Change Username</h3>
 
     <h3>Close Account</h3>
-    <form method="post" action='{{"/api/user/" + id}}'>
-        <input type='submit' class='btn btn-danger' value='Delete' />
-    </form>
+    <button ng-click='deleteAccount()' class='btn btn-danger'>Delete Account</button>
 </div>
