--- a/client/views/login.html
+++ b/client/views/login.html
@@ -3,11 +3,11 @@
 	<form  ng-submit="login()">
 		<div class="form-group">
 			<label> Email: </label>
-			<input type="text" name="email" class='form-control' ng-model='form.email' />
+			<input type="text" name="email" class='form-control' ng-model='loginForm.email' />
 		</div>
 		<div class="form-group">
 			<label> Password: </label>
-			<input type="password" name="password" class='form-control' ng-model='form.password' />
+			<input type="password" name="password" class='form-control' ng-model='loginForm.password' />
 		</div>
 		<div class="form-group">
 			<input type="submit" value="Submit" class='btn btn-primary'/>
@@ -17,18 +17,18 @@
 
 <div class='col-md-3 col-xs-12'>
 	Sign Up
-	<form action="/api/user" method="post">
+	<form ng-submit='signup()'>
 		<div class="form-group">
 			<label> Email: </label>
-			<input type="text" name="email" class='form-control'/>
+			<input type="text" name="email" class='form-control' ng-model='signupForm.email'/>
 		</div>
 		<div class="form-group">
 			<label> Password: </label>
-			<input type="password" name="password" class='form-control'/>
+			<input type="password" name="password" class='form-control' ng-model='signupForm.password'/>
 		</div>
 		<div class="form-group">
 			<label> Username (can be anything you want!):</label>
-			<input type='text' name='username' class='form-control'/>
+			<input type='text' name='username' class='form-control' ng-model='signupForm.username'/>
 		</div>
 		<div class="form-group">
 			<input type="submit" value="Submit" class='btn btn-primary'/>
